--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>XLB | Rock Paper Scissors</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
